--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,15 +2,14 @@
 Dark Grey : #323232
 Accent Yellow : #fdab22 */
 
-body{
+body {
   background-color: #f7f7f7;
   color: #323232;
-
 }
 header {
   padding-top: 50px;
   background-color: #fff;
-  border-bottom: 1px;
+  border-width: 0px 0px 1px 0px;
   border-style: solid;
   border-color: #c8c8c8;
 }
@@ -45,10 +44,11 @@ h2 {
   font-size: 125px;
   font-weight: 800;
   text-align: center;
+  text-transform: uppercase;
 }
 form label {
   font-weight: 800;
-    color: #fdab22;
+  color: #fdab22;
 }
 .slider {
   width: 100%;
@@ -57,9 +57,24 @@ form label {
   padding-top: 25px;
 }
 
+/* Tablet Styles */
+@media only screen and (max-width: 996px) {
+  header {
+    padding-top: 20px;
+  }
+  h1 {
+    padding-left: 5px;
+  }
+  h2 {
+    padding-left: 5px;
+  }
+  #form-wrapper p {
+    font-size: 60px;
+  }
+}
+
 /* Mobile Styles */
 @media only screen and (max-width: 600px) {
-  
   header {
     padding-top: 20px;
   }
