--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -56,7 +56,9 @@ form label {
 
 /* Slider styling */
   .slider {
+    height: 25px;
     -webkit-appearance: none;
+    margin: 10px 0;
     width: 100%;
     background: transparent; 
   }
@@ -80,35 +82,85 @@ form label {
   /* Slider styling for Webkit */
   .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
-    border: 1px solid #000000;
+    border: 1px solid #fdab22;
     height: 18px;
     width: 18px;
     border-radius: 25px;
-    background: #000000;
+    background: #fdab22;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -8px;
   }
+  .slider::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 3px;
+    cursor: pointer;
+    animation: 0.2s;
+    box-shadow: 0 0 0 #000000;
+    background: #D9D9D9;
+    border-radius: 1px;
+    border: 0 solid #000000;
+  }
+  .slider:focus::-webkit-slider-runnable-track {
+    background: #d9d9d9;
+  }
 
   /* Slider styling for Firefox */
   .slider::-moz-range-thumb {
-    border: 1px solid #000000;
+    border: 1px solid #fdab22;
     height: 18px;
     width: 18px;
     border-radius: 25px;
-    background: #000000;
+    background: #fdab22;
     cursor: pointer;
+  }
+  .slider::-moz-range-track {
+    width: 100%;
+    height: 3px;
+    cursor: pointer;
+    animation: 0.2s;
+    box-shadow: 0 0 0 #000000;
+    background: #d9d9d9;
+    border-radius: 1px;
+    border: 0 solid #000000;
   }
 
   /* Slider styling for IE */
   .slider::-ms-thumb {
     margin-top: 1px;
-    border: 1px solid #000000;
+    border: 1px solid #fdab22;
     height: 18px;
     width: 18px;
     border-radius: 25px;
-    background: #000000;
+    background: #fdab22;
     cursor:pointer;
+  }
+  .slider::-ms-track {
+    width: 100%;
+    height: 3px;
+    cursor: pointer;
+    animation: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  .slider::-ms-fill-lower {
+    background: #d9d9d9;
+    border: 0 solid #000000;
+    border-radius: 2px;
+    box-shadow: 0 0 0 #000000;
+  }
+  .slider::-ms-fill-upper {
+    background: #d9d9d9;
+    border: 0 solid #000000;
+    border-radius: 2px;
+    box-shadow: 0 0 0 #000000;
+  }
+  .slider::-ms-fill-lower {
+    background: #d9d9d9;
+  }
+  .slider::-ms-fill-upper {
+    background: #d9d9d9;
   }
 
 /* Tablet Styles */
