add colors to styles.css and add functionality for slider to change text

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,3 +88,148 @@ form label {
     font-size: 60px;
   }
 }
+
+.devastated {
+  color: black;
+}
+.mournful {
+  color: #4e4c5c;
+}
+.heartbroken {
+  color: #5f5b7d;
+}
+.dark {
+  color: #01000a;
+}
+.beleaguered {
+  color: #663a87;
+}
+.alone {
+  color: #4b0a5c;
+}
+.scared {
+  color: #6e122f;
+}
+.crazy {
+  color: #e813d3;
+}
+.stressed {
+  color: #990f1b;
+}
+.sad {
+  color: #04068a;
+}
+.tender {
+  color: #046b8a;
+}
+.irritated {
+  color: #2c9e52;
+}
+.fastidious {
+  color: #a1bf1b;
+}
+.bored {
+  color: #c9970c;
+}
+.preoccupied {
+  color: #e05f46;
+}
+.lazy {
+  color: #1ac6d9;
+}
+.studious {
+  color: #b56353;
+}
+.sleepy {
+  color: #3a1ad9;
+}
+.eager {
+  color: #5badeb;
+}
+.busy {
+  color: #eff70a;
+}
+.undercaffeinated {
+  color: #f70a9c;
+}
+.relaxed {
+  color: #0444ba;
+}
+.curious {
+  color: #09f205;
+}
+.groovy {
+  color: #f7be02;
+}
+.dreamy {
+  color: #02c6f7;
+}
+.playful {
+  color: #ac11fa;
+}
+.emotional {
+  color: #118dfa;
+}
+.defiant {
+  color: #fc0a47;
+}
+.cute {
+  color: #fc7f0a;
+}
+.cheerful {
+  color: #f4f716;
+}
+.upbeat {
+  color: #93aaf5;
+}
+.sexy {
+  color: #fa0000;
+}
+.nostalgiac {
+  color: #127351;
+}
+.happy {
+  color: #48b6fa;
+}
+.timeless {
+  color: #dc48fa;
+}
+.perfect {
+  color: #a3eef0;
+}
+.adventurous {
+  color: #dbf0a3;
+}
+.sassy {
+  color: #ffe205;
+}
+.driven {
+  color: #543333;
+}
+.hardcore {
+  color: #192529;
+}
+.intense {
+  color: #4d5254;
+}
+.territorial {
+  color: #ced8db;
+}
+.triumphant {
+  color: #96ffcb;
+}
+.beautiful {
+  color: #ffff87;
+}
+.amorous {
+  color: #f7c1d0;
+}
+.confident {
+  color: #c20d04;
+}
+.outgoing {
+  color: #34e024;
+}
+.euphoric {
+  color: #7907fa;
+}
