--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,7 +29,7 @@ h1 {
   padding-left: 25px;
 }
 span.yellow {
-  color: #fdab22;
+  color: var(--main-color);
 }
 h2 {
   padding-left: 25px;
@@ -53,7 +53,7 @@ h2 {
 }
 form label {
   font-weight: 800;
-  color: #fdab22;
+  color: var(--main-color);
 }
 .spotify-player {
   padding-top: 25px;
@@ -91,7 +91,7 @@ form label {
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #fdab22;
+  background: var(--main-color);
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -8px;
@@ -120,7 +120,7 @@ form label {
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #fdab22;
+  background: var(--main-color);
   cursor: pointer;
 }
 .slider::-moz-range-track {
@@ -141,7 +141,7 @@ form label {
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #fdab22;
+  background: var(--main-color);
   cursor: pointer;
 }
 .slider::-ms-track {
