WIP: styling HTML

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,10 @@ Accent Yellow : #fdab22 */
 
 :root {
   --main-color: #fdab22;
+  --dark-grey: #323232;
+  --light-grey: #f7f7f7;
 }
 
-@import "colors.css";
 body {
   background-color: #f7f7f7;
   color: #323232;
@@ -22,7 +23,7 @@ header {
   padding: 25px;
 }
 h1 {
-  color: #323232;
+  color: var(--dark-grey);
   font-size: 68px;
   font-weight: 700;
   background-color: #fff;
@@ -67,15 +68,12 @@ form label {
   width: 100%;
   background: transparent;
 }
-
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
-
 .slider:focus {
   outline: none;
 }
-
 .slider::-ms-track {
   width: 100%;
   cursor: pointer;
@@ -101,17 +99,17 @@ form label {
   height: 2px;
   cursor: pointer;
   animation: 0.2s;
-  box-shadow: 0 #000000;
+  box-shadow: 0 var(--dark-grey);
   background: #838383;
   border-radius: 0px;
-  border: 0 solid #000000;
+  border: 0 solid var(--dark-grey);
 }
 .slider:focus::-webkit-slider-runnable-track {
   background: #9b8769;
   height: 2px;
-  box-shadow: 0 #000000;
+  box-shadow: 0 var(--dark-grey);
   border-radius: 0;
-  border: 0 solid #000000;
+  border: 0 solid var(--dark-grey);
 }
 
 /* Slider styling for Firefox */
@@ -128,10 +126,10 @@ form label {
   height: 3px;
   cursor: pointer;
   animation: 0.2s;
-  box-shadow: 0 0 0 #000000;
+  box-shadow: 0 0 0 var(--dark-grey);
   background: #838383;
   border-radius: 0px;
-  border: 0 solid #000000;
+  border: 0 solid var(--dark-grey);
 }
 
 /* Slider styling for IE */
@@ -155,21 +153,26 @@ form label {
 }
 .slider::-ms-fill-lower {
   background: #838383;
-  border: 0 solid #000000;
+  border: 0 solid var(--dark-grey);
   border-radius: 0px;
-  box-shadow: 0 0 0 #000000;
+  box-shadow: 0 0 0 var(--dark-grey);
 }
 .slider::-ms-fill-upper {
   background: #838383;
-  border: 0 solid #000000;
+  border: 0 solid var(--dark-grey);
   border-radius: 0px;
-  box-shadow: 0 0 0 #000000;
+  box-shadow: 0 0 0 var(--dark-grey);
 }
 .slider:focus::-ms-fill-lower {
   background: #838383;
 }
 .slider:focus::-ms-fill-upper {
   background: #838383;
+}
+
+/* Footer Styles */
+footer {
+  text-align: center;
 }
 
 /* Tablet Styles */
