--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,8 +10,11 @@ Accent Yellow : #fdab22 */
 }
 
 body {
-  background-color: #f7f7f7;
-  color: #323232;
+  background-color: var(--light-grey);
+  color: var(--dark-grey);
+  border-color: var(--main-color);
+  border-width: 10px 0 2px 0;
+  border-style: solid;
 }
 header {
   padding-top: 50px;
@@ -191,23 +194,61 @@ form label {
 }
 
 #mood-outputs h2,
-.media-recommendations .row h3,
 #mood-outputs p {
   text-align: center;
 }
-
 #mood-outputs hr {
   border-top: white;
   border-width: 1px;
   border-style: solid;
   width: 5%;
 }
+.movie-result {
+  padding-top: 15px;
+}
+
+.media-recommendations .row h3 {
+  border-bottom: #fff;
+  border-style: solid;
+  border-width: 0 0 2px 0;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  margin-bottom: 0px;
+}
+
+.movie-result h4.title {
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: rgba(0, 0, 0, 0.082);
+  border-style: solid;
+  border-width: 0 0 1px 0;
+  padding-bottom: 5px;
+}
+.movie-result h5.resource {
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #fff;
+  font-size: 12px;
+  margin: 0px;
+  padding: 0px 0px 10px 0px;
+}
+.movie-result h5.resource a {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.movie-result .description {
+  text-align: left !important;
+  margin: 0px;
+  padding: 0px 0px 10px 0px;
+}
 
 /* Footer Styles */
 footer {
   text-align: center;
 }
-
 #contributors {
   list-style-type: none;
   margin-left: auto;
@@ -217,14 +258,17 @@ footer {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-
 #contributors li {
   display: inline;
   margin-right: 15px;
 }
-
 #contributors li a {
   color: var(--main-color);
+  font-weight: 700;
+}
+
+#contributors li a:hover {
+  text-decoration: none;
 }
 
 /* Tablet Styles */
